chore: Update ddev config to use Drupal 10

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,4 +1,4 @@
-name: ddev-gitpod
+name: ddev-drupal-openai-gitpod
 type: drupal10
 docroot: web
 php_version: "8.1"
@@ -9,8 +9,8 @@ xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-  type: mariadb
-  version: "10.4"
+  type: postgres
+  version: "14"
 nfs_mount_enabled: false
 mutagen_enabled: false
 use_dns_when_possible: true
